
Library
* create API functions to access link information values
* add libfvalue

API
* add functions
  - for shell item
  - for icon location block ?
  - for special and/or known folder identifier

Release:
* check TODOs
* configure
 - check inclusion local library functions
* update manuals
* automated tests
  - 2x open/close (bfio and normal)

Bindings:
* .net
* java

20120805
* updated dependencies
* bug fix in pymsiecf file object libbfio glue code

20120626
* worked on shell items
  - detection of delegate 0x2e item
* fix in debug output for local path

20120421
* worked on tests

20120416
* code clean up

20120414
* textual changes

20120413
* updated dependencies
* moved examples to project site
* updated lnkinfo man page
* worked on tests
* fixed codepage 1255 restriction
* updates and bug fixes in pylnk

20120409
* fixed codepage 949 and 950 restriction

20120319
* updated dependencies

20130303
* added PackageMaker files
* added functions to retrieve drive type, drive serial number and volume label
* fix trailing \ for local and network path when common path is an emtpy string

20130202
* improved handling of link information flags for Windows 95 LNK file
* updated libfwsi

20130117
* fixed issue in lnkinfo where date and time values were not printed
  when location info flag was not set

20130116
* 2013 update
* updated dependencies
* updated pylnk
* bug fixes in lnktools
* bug fixes in pylnk

20121205
* changes to msvscpp files for visual studio 2010 build

20121121
* update for missing path separator in network path
* updated msvscpp files

20121120
* update for missing path separator in network path

20121104
* pylnk: fixes for 32-bit build

20121103
* pylnk: bug fixes
* updated dependencies
* fixes to spec file

20121026
* bug fix in new pylnk functions

20121025
* libfwsi update, fixed issues with debug output

20121024
* pylnk: added time_as_integer functions

20121023
* updated dependencies
* bug fixes in pylnk
* code clean up

20120925