@@ -1,0 +1,60 @@
+/*
+ * The libuna header wrapper
+ *
+ * Copyright (c) 2009-2013, Joachim Metz <joachim.metz@gmail.com>
+ *
+ * Refer to AUTHORS for acknowledgements.
+ *
+ * This software is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This software is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this software.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+#if !defined( _LNKTOOLS_LIBUNA_H )
+#define _LNKTOOLS_LIBUNA_H
+
+#include <common.h>
+
+/* Define HAVE_LOCAL_LIBUNA for local use of libuna
+ */
+#if( HAVE_LOCAL_LIBUNA )
+
+#include <libuna_base16_stream.h>
+#include <libuna_base32_stream.h>
+#include <libuna_base64_stream.h>
+#include <libuna_byte_stream.h>
+#include <libuna_error.h>
+#include <libuna_unicode_character.h>
+#include <libuna_url_stream.h>
+#include <libuna_utf16_stream.h>
+#include <libuna_utf16_string.h>
+#include <libuna_utf32_stream.h>
+#include <libuna_utf32_string.h>
+#include <libuna_utf8_stream.h>
+#include <libuna_utf8_string.h>
+#include <libuna_types.h>
+
+#else
+
+/* If libtool DLL support is enabled set LIBUNA_DLL_IMPORT
+ * before including libuna.h
+ */
+#if defined( _WIN32 ) && defined( DLL_IMPORT )
+#define LIBUNA_DLL_IMPORT
+#endif
+
+#include <libuna.h>
+
+#endif
+
+#endif
+
