@@ -1,7 +1,7 @@
 <pkgref spec="1.12" uuid="B3A5D8A0-F48E-4BFD-B638-B3BB98CD8E0A">
 <config>
 	<identifier>com.google.code.p.liblnk.include.pkg</identifier>
-	<version>20130805</version>
+	<version>20130806</version>
 	<description/>
 	<post-install type="none"/>
 	<requireAuthorization/>
